--- a/.htaccess
+++ b/.htaccess
@@ -19,7 +19,7 @@ php_value   session.gc_divisor       500
 php_value   session.gc_probability   1
 </IfModule>
 
-#<IfModule mod_rewrite.c>
+<IfModule mod_rewrite.c>
 #Options +FollowSymLinks -Indexes
 
 DirectoryIndex index.php
